# highlight_editor

./: .gitignore  autoEdit.jsx
MarkerAutoCut/: CMakeLists.txt
MarkerAutoCut/src/: MarkerAutoCut.cpp  MarkerAutoCut.h
MarkerAutoCutCEP/CSXS/: manifest.xml
MarkerAutoCutCEP/client/: index.html  main.js  style.css
MarkerAutoCutCEP/jsx/: autoEdit.jsx
MyCEPPanel/: .debug
MyCEPPanel/CSXS/: manifest.xml
MyCEPPanel/client/: index.html
Premiere OnScript Template/: index.html
Premiere OnScript Template/CSXS/: manifest.xml
Premiere OnScript Template/jsx/: extendScript.jsx  extendScript.jsx.bak
backup/: marker_parser.cpp
backup/highlight_editor_plugin/: index.html  manifest.xml  marker_data.json
backup/highlight_editor_plugin/js/: main.js
backup/highlight_editor_plugin/jsx/: marker_cutter.jsx
com.example.myceppanel/: .debug  package.json
com.example.myceppanel/CSXS/: manifest.xml
com.example.myceppanel/client/: main.js
com.example.myceppanel/jsx/: autoEdit.jsx
